--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="XYlvh0wpH_SH4o1GWyi4KvchZ2dSgQdlW-SmB4e-c2g" />
     <title>TolStack Pro</title>
   </head>
   <body class="bg-slate-50 text-slate-900 font-sans antialiased">
